--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
     "author": "Joshua Munn",
     "license": "GPL-3.0-or-later",
     "scripts": {
-        "dev": "tailwindcss -i src/maketoc.css -o dist/maketoc.css --watch",
-        "build": "tailwindcss -i src/maketoc.css -o dist/maketoc.css"
+        "dev": "postcss src/maketoc.css -o dist/maketoc.css --watch --env development --verbose",
+        "build": "postcss src/maketoc.css -o dist/maketoc.css --env production --verbose"
     },
     "devDependencies": {
+        "autoprefixer": "^10.2.6",
+        "postcss": "^8.3.5",
+        "postcss-cli": "^8.3.1",
+        "postcss-import": "^14.0.2",
+        "postcss-nesting": "^8.0.1",
         "tailwindcss": "^2.2.2"
     },
-    "dependencies": {
-        "@tailwindcss/typography": "^0.4.1"
-    }
+    "dependencies": {}
 }
