--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
     "permissions": ["activeTab", "tabs"],
     "content_scripts": [{
         "matches": ["<all_urls>"],
-        "js": ["maketoc.js"],
+        "js": ["dist/maketoc.js"],
         "css": ["dist/maketoc.css"],
         "match_about_blank": true
     }],
     "background": {
-        "page": "background.html"
+        "scripts": ["dist/background.js"]
     },
     "commands": {
         "toggle-feature": {
