--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "author": "Joshua Munn",
     "license": "GPL-3.0-or-later",
     "scripts": {
-        "dev": "webpack --node-env development --watch",
-        "build": "webpack --node-env production"
+        "dev": "webpack --env development --watch",
+        "build": "webpack --env production"
     },
     "devDependencies": {
         "autoprefixer": "^10.2.6",
