--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
         "postcss-loader": "^6.1.0",
         "postcss-nesting": "^8.0.1",
         "tailwindcss": "^2.2.2",
-        "webextension-polyfill": "^0.8.0",
+        "ts-loader": "^9.2.3",
+        "typescript": "^4.3.4",
+        "webextension-polyfill-ts": "^0.25.0",
         "webpack": "^5.40.0",
         "webpack-cli": "^4.7.2"
     },
