--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "postcss-cli": "^8.3.1",
         "postcss-import": "^14.0.2",
         "postcss-loader": "^6.1.0",
-        "postcss-nesting": "^8.0.1",
+        "postcss-nested": "^5.0.5",
         "tailwindcss": "^2.2.2",
         "ts-loader": "^9.2.3",
         "typescript": "^4.3.4",
